# SkillRay

./: .gitignore  LICENSE  README.md  README.zh.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skillray/: __init__.py  cli.py  config.py  i18n.py  models.py  scanner.py
skillray/engines/: __init__.py  ast_engine.py  base.py  dataflow_engine.py  entropy_engine.py  prompt_engine.py  regex_engine.py
skillray/reporters/: __init__.py  json_reporter.py  markdown.py  summary.py  text.py
skillray/rules/: __init__.py  code_execution.py  credential_theft.py  data_exfiltration.py  destructive_ops.py  obfuscation.py  privilege_escalation.py  prompt_injection.py  registry.py  supply_chain.py  tool_poisoning.py
skillray_scan/: __init__.py  cli.py  ignore.py  models.py  reporters.py  rules.py  scanner.py
tests/: __init__.py  conftest.py  test_cli.py  test_ignore.py  test_rules.py  test_scanner.py
tests/samples/benign/: SKILL.md  organizer.py
tests/samples/malicious/: SKILL.md  evil_script.py  exfil.sh
tests/test_engines/: test_ast.py  test_dataflow.py  test_entropy.py  test_prompt.py  test_regex.py
tests/test_rules/: test_registry.py
