[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillray"
version = "2.0.0"
description = "AI Skill Security Scanner — multi-engine static analysis for AI agent skills"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "SkillRay Team" },
]
keywords = ["security", "ai", "skill", "scanner", "static-analysis", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
skillray = "skillray.cli:main"

[project.urls]
Homepage = "https://github.com/MRT-8/SkillRay"
Repository = "https://github.com/MRT-8/SkillRay"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["skillray"]
